Initial site design

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="The Garrison RV Park"
-      content="A community for veterans, patriots, and like-minded Americans"
+      name="The Garrison RV Park and Campground"
+      content="A community for veterans, first-responders, and patriots"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/TheGarrisonIcon.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>The Garrison RV</title>
+    <title>The Garrison RV Park and Campground</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
